fixed group promo arrow positioning on mobile

--- a/app/assets/sass/_typography-lcc.scss
+++ b/app/assets/sass/_typography-lcc.scss
@@ -361,3 +361,16 @@ ol {
     }
   }
 }
+
+//blockquote
+blockquote {
+    border-left: 15px solid $base-link-hover-color;
+
+  span.open-quote:after {
+    color: $light-grey;
+  }
+
+  footer {
+    color: $base-font-color;
+  }
+}
